_gaps calculation fix

--- a/src/assets/styles/tokens/_gaps.scss
+++ b/src/assets/styles/tokens/_gaps.scss
@@ -1,4 +1,4 @@
-// TODO: docs, make function to not hardcode each "x" ???
+// TODO: make function to not hardcode each "x" ???
 
 $gap-base: 4px;
 $gap-2x: 2 * $gap-base;
@@ -12,6 +12,7 @@ $gap-9x: 9 * $gap-base;
 $gap-10x: 10 * $gap-base;
 $gap-11x: 11 * $gap-base;
 $gap-12x: 12 * $gap-base;
+$gap-13x: 13 * $gap-base;
 $gap-14x: 14 * $gap-base;
 $gap-15x: 15 * $gap-base;
 $gap-16x: 16 * $gap-base;
@@ -46,44 +47,45 @@ $gap-40x: 40 * $gap-base;
 
 :root {
   --gap-base: #{$gap-base};
-  --gap-2x: #{$gap-2x};
-  --gap-3x: #{$gap-3x};
-  --gap-4x: #{$gap-4x};
-  --gap-5x: #{$gap-5x};
-  --gap-6x: #{$gap-6x};
-  --gap-7x: #{$gap-7x};
-  --gap-8x: #{$gap-8x};
-  --gap-9x: #{$gap-9x};
-  --gap-10x: #{$gap-10x};
-  --gap-11x: #{$gap-11x};
-  --gap-12x: #{$gap-12x};
-  --gap-14x: #{$gap-14x};
-  --gap-15x: #{$gap-15x};
-  --gap-16x: #{$gap-16x};
-  --gap-17x: #{$gap-17x};
-  --gap-18x: #{$gap-18x};
-  --gap-19x: #{$gap-19x};
-  --gap-20x: #{$gap-20x};
-  --gap-21x: #{$gap-21x};
-  --gap-22x: #{$gap-22x};
-  --gap-23x: #{$gap-23x};
-  --gap-24x: #{$gap-24x};
-  --gap-25x: #{$gap-25x};
-  --gap-26x: #{$gap-26x};
-  --gap-27x: #{$gap-27x};
-  --gap-28x: #{$gap-28x};
-  --gap-29x: #{$gap-29x};
-  --gap-30x: #{$gap-30x};
-  --gap-31x: #{$gap-31x};
-  --gap-32x: #{$gap-32x};
-  --gap-33x: #{$gap-33x};
-  --gap-34x: #{$gap-34x};
-  --gap-35x: #{$gap-35x};
-  --gap-36x: #{$gap-36x};
-  --gap-37x: #{$gap-37x};
-  --gap-38x: #{$gap-38x};
-  --gap-39x: #{$gap-39x};
-  --gap-40x: #{$gap-40x};
+  --gap-2x: calc(2 * var(--gap-base));
+  --gap-3x: calc(3 * var(--gap-base));
+  --gap-4x: calc(4 * var(--gap-base));
+  --gap-5x: calc(5 * var(--gap-base));
+  --gap-6x: calc(6 * var(--gap-base));
+  --gap-7x: calc(7 * var(--gap-base));
+  --gap-8x: calc(8 * var(--gap-base));
+  --gap-9x: calc(9 * var(--gap-base));
+  --gap-10x: calc(10 * var(--gap-base));
+  --gap-11x: calc(11 * var(--gap-base));
+  --gap-12x: calc(12 * var(--gap-base));
+  --gap-13x: calc(13 * var(--gap-base));
+  --gap-14x: calc(14 * var(--gap-base));
+  --gap-15x: calc(15 * var(--gap-base));
+  --gap-16x: calc(16 * var(--gap-base));
+  --gap-17x: calc(17 * var(--gap-base));
+  --gap-18x: calc(18 * var(--gap-base));
+  --gap-19x: calc(19 * var(--gap-base));
+  --gap-20x: calc(20 * var(--gap-base));
+  --gap-21x: calc(21 * var(--gap-base));
+  --gap-22x: calc(22 * var(--gap-base));
+  --gap-23x: calc(23 * var(--gap-base));
+  --gap-24x: calc(24 * var(--gap-base));
+  --gap-25x: calc(25 * var(--gap-base));
+  --gap-26x: calc(26 * var(--gap-base));
+  --gap-27x: calc(27 * var(--gap-base));
+  --gap-28x: calc(28 * var(--gap-base));
+  --gap-29x: calc(29 * var(--gap-base));
+  --gap-30x: calc(30 * var(--gap-base));
+  --gap-31x: calc(31 * var(--gap-base));
+  --gap-32x: calc(32 * var(--gap-base));
+  --gap-33x: calc(33 * var(--gap-base));
+  --gap-34x: calc(34 * var(--gap-base));
+  --gap-35x: calc(35 * var(--gap-base));
+  --gap-36x: calc(36 * var(--gap-base));
+  --gap-37x: calc(37 * var(--gap-base));
+  --gap-38x: calc(38 * var(--gap-base));
+  --gap-39x: calc(39 * var(--gap-base));
+  --gap-40x: calc(40 * var(--gap-base));
 }
 
 // the :export directive is the magic sauce for webpack.
@@ -102,6 +104,7 @@ $gap-40x: 40 * $gap-base;
   gap-10x: $gap-10x;
   gap-11x: $gap-11x;
   gap-12x: $gap-12x;
+  gap-13x: $gap-13x;
   gap-14x: $gap-14x;
   gap-15x: $gap-15x;
   gap-16x: $gap-16x;
